# Agentle

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  SCAFFOLD_MANIFEST.txt  pyproject.toml
config/: README.md
docs/decisions/: 0000-template.md  0001-static-composition-and-owned-adapters.md  0002-runtime-command-event-contract.md  0003-pydantic-ai-phase-1-adapter.md  0004-qt-runtime-thread-boundary.md  0005-phase-1-local-execution-boundary.md  0006-sqlite-session-and-event-journal.md  README.md
examples/: README.md
plans/agents/: notes.md  plan.md
plans/context/: notes.md  plan.md
plans/distribution/: notes.md  plan.md
plans/execution/: notes.md  plan.md
plans/foundation/: notes.md  plan.md
plans/gui/: notes.md  plan.md
plans/integrations/: notes.md  plan.md
plans/memory/: notes.md  plan.md
plans/models/: notes.md  plan.md
plans/observability/: notes.md  plan.md
plans/persistence/: notes.md  plan.md
plans/policy/: notes.md  plan.md
plans/projects/: notes.md  plan.md
plans/runtime/: notes.md  plan.md
plans/skills/: notes.md  plan.md
plans/testing/: notes.md  plan.md
plans/tools/: notes.md  plan.md
scripts/: check.ps1  check.sh
src/agentle/: __init__.py  __main__.py  app.py
src/agentle/agents/: __init__.py  contracts.py
src/agentle/context/: __init__.py  assembler.py  contracts.py
src/agentle/execution/: __init__.py  contracts.py  local.py
src/agentle/foundation/: __init__.py  cancellation.py  errors.py  identifiers.py  secrets.py  time.py
src/agentle/gui/: __init__.py  bridge.py  main_window.py  state.py
src/agentle/integrations/: __init__.py
src/agentle/memory/: __init__.py
src/agentle/models/: __init__.py  contracts.py
src/agentle/observability/: __init__.py
src/agentle/persistence/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py
tests/contract/: test_local_execution.py  test_read_text_tool.py  test_sqlite_persistence.py
tests/end_to_end/: test_gui_smoke.py
tests/integration/: __init__.py  test_full_vertical_path.py  test_runtime_thread_client.py  test_runtime_vertical_core.py
tests/live/: __init__.py  test_openai_compatible_endpoint.py
tests/unit/: test_package.py
(+37 files in other folders)
