[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentle"
version = "0.0.0"
description = "A modular desktop host for agentic systems and proven open-source backends."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Daniel C." }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]
gui = ["PyQt6>=6.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentle"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agentle"]
