[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentle"
version = "0.0.0"
description = "A modular desktop host for agentic systems and proven open-source backends."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Daniel C." }]
dependencies = [
  "openai==2.46.0",
  "pydantic-ai-slim[openai]==1.107.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]
gui = ["PyQt6>=6.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentle"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config -m 'not live and not slow' --basetemp=.tmp-pytest"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "gui: offscreen GUI behavior",
  "integration: cross-section integration behavior",
  "live: opt-in test requiring a configured network endpoint",
  "slow: opt-in long-running behavior",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agentle"]
